--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,17 +1,19 @@
 @import "../../../scss/utils/mixin";
 .footer {
+  padding: 40px 20px;
+  background-color: #0B1D26;
   @include mq(tablet) {
     position: relative;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding: 40px 32px;
   }
   @include mq(desktop) {
-    padding: 0 40px 40px 120px;
+    padding: 80px 40px 120px;
   }
 }
 .heading {
-  margin-top: 20px;
   text-transform: uppercase;
   font-size: 22px;
   font-weight: 600;
@@ -39,13 +41,13 @@
   margin-top: 80px;
   @include mq(tablet) {
     position: absolute;
-    bottom: 4px;
+    bottom: 46px;
     font-size: 14px;
     margin-top: 0;
   }
   @include mq(desktop) {
     font-size: 18px;
-    bottom: 45px;
+    bottom: 126px;
   }
 }
 .listWrapper {
