--- a/src/app/components/GallerySection/GallerySection.module.scss
+++ b/src/app/components/GallerySection/GallerySection.module.scss
@@ -1,22 +1,15 @@
 @import "../../../scss/utils/mixin";
 
 .gallerySection {
-    background-image: linear-gradient(rgba(11, 29, 38, 0.4), rgba(11, 29, 38, 1));
-//     url("../../images/VG1x.png"),
-//     url("../../images/MG1x.png");
-//   background-repeat: no-repeat, no-repeat, no-repeat;
-//   background-size: 100%,  contain, contain;
-//   background-position: 0 0,  50% 141px, 0 0;
-  // padding-left: 40px;
-  // padding-right: 40px;
-//   background-color: #354147;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.2);
+  background-color: #0b1d26;
 }
-.wrapper {
+.listWrapper {
   @include mq(tablet) {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 200px;
+    &:not(:last-child) {
+      margin-bottom: 200px;
+    }
   }
 }
 
@@ -62,7 +55,7 @@
   @include mq(tablet) {
     padding-top: 80px;
     padding-left: 80px;
-    // width: 600px;
+    width: 400px;
   }
   @include mq(desktop) {
     padding-top: 140px;
@@ -90,7 +83,7 @@
   font-weight: 600;
   margin-top: 27px;
   @include mq(tablet) {
-    font-size: 64px;
+    font-size: 36px;
   }
   @include mq(desktop) {
     font-size: 64px;
@@ -101,9 +94,11 @@
   font-weight: 500;
   margin-top: 27px;
   @include mq(tablet) {
+    margin-right: 20px;
   }
   @include mq(desktop) {
     font-weight: 700;
+    margin-right: 0;
   }
 }
 .btn {
@@ -121,18 +116,11 @@
     right: 0;
   }
 }
-
 .img {
+  display: block;
   object-fit: contain;
-  margin: 20px auto 0;
-
+  margin-top: 20px;
   @include mq(tablet) {
     margin-top: 0;
-    width: 308px;
-    height: 400px;
-  }
-  @include mq(desktop) {
-    width: 466px;
-    height: 650px;
   }
 }
