--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -2,18 +2,24 @@
 
 html {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
+html,
 body {
   margin: 0;
   font-family: 'Roboto';
   color: var(--main-text-cl);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 h1,
 h2,
@@ -33,8 +39,10 @@ ol {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 a {
+  color: inherit;
   text-decoration: none;
 }
 input,
