--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -1,16 +1,20 @@
 @import "../../scss/utils/mixin";
 .container {
-  min-width: 320px;
+  width: 100%;
+
   height: auto;
   margin-right: auto;
   margin-left: auto;
   padding: 40px 20px 0;
+  @include mq(mobile){
+    max-width: 320px;
+  }
   @include mq(tablet) {
-    min-width: 768px;
+    max-width: 768px;
     padding: 64px 32px 0;
   }
   @include mq(desktop) {
-    min-width: 1280px;
+    max-width: 1280px;
     padding: 64px 40px 0;
   }
 }
