--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,13 +1,13 @@
 @import "../../../scss/utils/mixin";
 .footer {
-  padding: 40px 20px;
+  // padding: 40px 20px;
   background-color: #0B1D26;
   @include mq(tablet) {
     position: relative;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 40px 32px;
+    // padding: 40px 32px;
   }
   @include mq(desktop) {
     padding: 80px 40px 120px;
@@ -38,16 +38,16 @@
   color: rgba(255, 255, 255, 0.5);
   font-size: 12px;
   font-weight: 500;
-  margin-top: 80px;
+  margin-top: 40px;
   @include mq(tablet) {
-    position: absolute;
-    bottom: 46px;
+    // position: absolute;
+    // bottom: 46px;
     font-size: 14px;
-    margin-top: 0;
+    margin-top: 20px;
   }
   @include mq(desktop) {
     font-size: 18px;
-    bottom: 126px;
+    // bottom: 126px;
   }
 }
 .listWrapper {
@@ -94,9 +94,10 @@
   @include mq(tablet) {
     font-size: 20px;
     font-weight: 700;
+    margin-top: 0;
   }
   @include mq(desktop) {
-    margin-top: 0;
+    // margin-top: 0;
     font-size: 24px;
   }
 }
