--- a/src/app/components/Wrapper/Wrapper.module.scss
+++ b/src/app/components/Wrapper/Wrapper.module.scss
@@ -20,6 +20,7 @@
     background-position: 0 0, 0 361px, 50% 141px, 0 0;
   }
   @include mq(desktop) {
+    // max-width: 1280px;
     background-position:0 0, 0 868px, 50% 500px, 0 0;
   }
 }
