--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -1,20 +1,19 @@
 @import "../../scss/utils/mixin";
 .container {
   width: 100%;
-
   height: auto;
   margin-right: auto;
   margin-left: auto;
-  padding: 40px 20px 0;
+  padding: 40px 20px;
   @include mq(mobile){
-    max-width: 320px;
+    width: 320px;
   }
   @include mq(tablet) {
-    max-width: 768px;
-    padding: 64px 32px 0;
+    width: 768px;
+    padding: 64px 32px;
   }
   @include mq(desktop) {
-    max-width: 1280px;
-    padding: 64px 40px 0;
+    width: 1280px;
+    padding: 64px 40px;
   }
 }
