--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -4,16 +4,14 @@
   height: auto;
   margin-right: auto;
   margin-left: auto;
-  padding: 40px 20px;
-  @include mq(mobile){
-    width: 320px;
-  }
+  padding-left: 20px;
+  padding-right: 20px;
   @include mq(tablet) {
-    width: 768px;
-    padding: 64px 32px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
   @include mq(desktop) {
-    width: 1280px;
-    padding: 64px 40px;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
