--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -85,14 +85,14 @@
   }
 }
 .btn_text {
-  padding-left: 5px;
+  margin-left: 5px;
 }
 .btn_menu {
   background-color: transparent;
   border-color: transparent;
   fill: #fff;
   position: absolute;
-  top: 60px;
+  top: 70px;
   right: 0;
   &:hover,
   &:focus {
