--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -5,15 +5,15 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  width: 320px;
+  // width: 320px;
   margin: 0 auto;
   padding-top: 40px;
   @include mq(tablet){
-    width: 768px;
+    // width: 768px;
     padding-top: 64px;
   }
   @include mq(desktop){
-    width: 1280px; 
+    // width: 1280px; 
   }
 }
 .logo {
