--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 @import "../../../scss/utils/mixin";
 .footer {
-  background-color: #0B1D26;
+  background-color: #0b1d26;
   width: 320px;
   margin: 0 auto;
   padding-top: 40px;
