--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -7,10 +7,12 @@
   padding-left: 20px;
   padding-right: 20px;
   @include mq(tablet) {
+    width: 768px;
     padding-left: 32px;
     padding-right: 32px;
   }
   @include mq(desktop) {
+    width: 1280px;
     padding-left: 40px;
     padding-right: 40px;
   }
