--- a/src/app/components/GallerySection/GallerySection.module.scss
+++ b/src/app/components/GallerySection/GallerySection.module.scss
@@ -3,9 +3,11 @@
 .gallerySection {
   background-color: #0b1d26;
 }
-.list{
+.list {
   padding-top: 100px;
-  @include mq(tablet) {padding-top: 0;}
+  @include mq(tablet) {
+    padding-top: 0;
+  }
 }
 .list_item {
   @include mq(tablet) {
