--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   align-items: center;
   position: relative;
   padding-top: 40px;
-  @include mq(tablet){
+  @include mq(tablet) {
     padding-top: 64px;
   }
 }
@@ -26,40 +26,29 @@
     font-weight: 700;
   }
 }
-.nav {
-  display: flex;
-  color: #fff;
-}
-.nav_item{
+
+.navWrapper {
   visibility: hidden;
   @include mq(tablet) {
-    position: relative;
     visibility: visible;
-    font-size: 18px;
-    font-weight: 700;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 }
-.nav_link {
-  display: inline-flex;
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 6%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background-color: #fbd784;
-    transform: translateY(100%) scaleX(0);
-    transition: transform 300ms linear;
-  }
-  &:hover::after,
-  &:focus::after {
-    cursor: pointer;
-    transform: translateY(100%) scaleX(1);
+
+.navigation {
+  background-color: #0b1d26;
+  padding-top: 10px;
+  padding-left: 40px;
+  width: 100%;
+  height: 40vh;
+  position: absolute;
+  top: 90px;
+  right: 40px;
+  border-radius: 4px;
+  @include mq(tablet) {
+    visibility: hidden;
   }
 }
+
 .btn {
   padding: 0;
   border: transparent;
@@ -86,7 +75,7 @@
   border-color: transparent;
   fill: #fff;
   position: absolute;
-  top: 70px;
+  top: 90px;
   right: 0;
   &:hover,
   &:focus {
