--- a/src/app/components/GallerySection/GallerySection.module.scss
+++ b/src/app/components/GallerySection/GallerySection.module.scss
@@ -11,6 +11,7 @@
 }
 .list_item {
   @include mq(tablet) {
+
     display: flex;
     justify-content: space-between;
     &:not(:last-child) {
@@ -22,7 +23,6 @@
   width: 250px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   position: relative;
   margin-top: 50px;
   @include mq(tablet) {
@@ -98,7 +98,7 @@
   margin-top: 27px;
   @include mq(tablet) {
     margin-top: 0;
-    margin-right: 20px;
+    // margin-right: 20px;
   }
   @include mq(desktop) {
     font-weight: 700;
@@ -134,5 +134,6 @@
   margin-top: 20px;
   @include mq(tablet) {
     margin-top: 0;
+    margin-left:20px ;
   }
 }
