--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -35,7 +35,7 @@
 }
 
 .navigation {
-  background-color: #0b1d26;
+  background-color: rgba(11, 29, 38, 0.8);
   padding-top: 10px;
   padding-left: 40px;
   width: 100%;
