--- a/src/app/components/Header/Header.module.scss
+++ b/src/app/components/Header/Header.module.scss
@@ -1,10 +1,13 @@
 @import "../../../scss/utils/mixin";
 
 .header {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   padding-top: 40px;
   @include mq(tablet) {
     padding-top: 64px;
@@ -36,14 +39,13 @@
 
 .navigation {
   background-color: rgba(11, 29, 38, 0.8);
-  padding-top: 10px;
-  padding-left: 40px;
   width: 100%;
-  height: 40vh;
+  height: auto;
   position: absolute;
   top: 90px;
   right: 40px;
   border-radius: 4px;
+  z-index: 20;
   @include mq(tablet) {
     visibility: hidden;
   }
@@ -60,6 +62,11 @@
   font-weight: 700;
   fill: #fff;
   transition: all 300ms ease-in-out;
+  position: absolute;
+  right: 10px;
+  @include mq(tablet) {
+    position: static;
+  }
   &:hover,
   &:focus {
     cursor: pointer;
@@ -76,7 +83,7 @@
   fill: #fff;
   position: absolute;
   top: 90px;
-  right: 0;
+  right: 10px;
   &:hover,
   &:focus {
     cursor: pointer;
