--- a/src/app/components/Hero/Hero.module.scss
+++ b/src/app/components/Hero/Hero.module.scss
@@ -1,17 +1,33 @@
 @import "../../../scss/utils/mixin";
-
-.heroSection {
+.heroSection{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding-top: 86px;
+  padding-top: 200px;
+  background-image: linear-gradient(rgba(11, 29, 38, 0), rgba(11, 29, 38, 1)),
+    url("../../images/VG1x.png"), url("../../images/MG1x.png"),
+    url("../../images/HG1x.png");
+  background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
+  background-size: 100%, cover, cover, cover;
+  background-position: 0 0, 0 257px, 0 141px, 0 0;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(11, 29, 38, 0), rgba(11, 29, 38, 1)),
+      url("../../images/VG2x.png"), url("../../images/MG2x.png"),
+      url("../../images/HG2x.png");
+  }
   @include mq(tablet) {
-    padding-top: 200px;
+    // background-size: 100%, cover, cover, cover;
+    background-position: 0 0, 0 361px, 0 141px, 0 0;
+    // padding-top: 200px;
     flex-wrap: nowrap;
     padding-bottom: 200px;
   }
   @include mq(desktop) {
+    background-size: 100%, contain, contain, contain;
+    background-position: 0 0, 0 868px, 0 500px, 0 0;
     padding-bottom: 700px;
   }
 }
