--- a/src/app/components/NavBar/NavBar.module.scss
+++ b/src/app/components/NavBar/NavBar.module.scss
@@ -2,21 +2,26 @@
 
 .nav {
   color: #fff;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
   @include mq(tablet) {
-    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 .nav_item {
+  font-size: 18px;
+  font-weight: 700;
     &:not(:first-child){
-        margin-top: 10px;  
+      margin-left: 10px; 
         }
   @include mq(tablet) {
     &:not(:first-child){
-        margin-top: 0;  
+      margin-left: 0; 
         }
     position: relative;
-    font-size: 18px;
-    font-weight: 700;
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -45,5 +50,4 @@
     transform: translateY(100%) scaleX(1);
   }
   }
-  
 }
