--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -4,7 +4,6 @@ html {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  // background-color:#0B1D26 ;
 }
 *,
 *::before,
@@ -21,6 +20,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   box-sizing: border-box;
+  background-color:  rgba(11, 29, 38, 0.8);
 }
 h1,
 h2,
