--- a/src/app/aboutUs/components/Hero/Hero.module.scss
+++ b/src/app/aboutUs/components/Hero/Hero.module.scss
@@ -2,39 +2,35 @@
 
 .heroSection {
   max-width: 1280px;
-  // position: relative;
-  // display: flex;
-  // flex-wrap: wrap;
+  margin: 0 auto;
+  overflow: scroll;
+  height: 400px;
+  @include mq(tablet) {
+    // display: flex;
+    // flex-wrap: wrap;
+    // width: 100%;
+  }
 }
 .wrapper {
-  // position: absolute;
-  // top: 0;
-  // left: 0;
-  // z-index: 4;
-  // height: 400px;
   @include mq(tablet) {
     display: flex;
   }
 }
 
 .img_wrapper_1 {
-  background-image: url("../../../images/blog/manHiking.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 600px;
+  height: 500px;
+  background-image: url("../../../images/blog/manHiking.jpg");
+
   @include mq(tablet) {
-    // background-size: contain;
   }
 }
 .img_wrapper_2 {
+  @extend .img_wrapper_1;
   background-image: url("../../../images/blog/beauty.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 600px;
   display: none;
 
   @include mq(tablet) {
@@ -42,23 +38,22 @@
   }
 }
 .img_wrapper_3 {
+  @extend .img_wrapper_1;
   background-image: url("../../../images/blog/dog.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 600px;
   display: none;
-
   @include mq(tablet) {
     display: block;
   }
 }
 
-
 .text {
-  width: 300px;
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1.33;
   margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  @include mq(tablet) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
