--- a/src/app/aboutUs/components/Hero/Hero.module.scss
+++ b/src/app/aboutUs/components/Hero/Hero.module.scss
@@ -40,15 +40,17 @@
     display: block;
   }
 }
-
+.heading{
+    margin: 20px auto 0;
+    @include mq(tablet) {
+        margin: 40px auto 0;
+      }
+}
 .text {
   font-size: 18px;
   line-height: 1.33;
-  margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  margin: 20px auto;
   @include mq(tablet) {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    margin: 40px auto;
   }
 }
