--- a/src/app/aboutUs/components/Hero/Hero.module.scss
+++ b/src/app/aboutUs/components/Hero/Hero.module.scss
@@ -34,7 +34,7 @@
 }
 .img_wrapper_3 {
   @extend .img_wrapper_1;
-  background-image: url("../../../images/blog/dog.jpg");
+  background-image: url("../../../images/blog/climbing/girlClimbing.jpg");
   display: none;
   @include mq(tablet) {
     display: block;
